force-app/main/default/objects/Case_Study__c/Case_Study__c.object-meta.xml
<CustomObject>
    <description>Used for tracking media case studies on families and volunteers.</description>
    <label>Case Study</label>
    <nameField>
        <displayFormat>CS-{000}</displayFormat>
        <label>Case Study ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>