force-app/main/default/objects/Case_Study__c/fields/Best_Contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If blank, contact the primary contact listed on the household account</inlineHelpText>
    <label>Best Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Family__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Studies (Best Contact)</relationshipLabel>
    <relationshipName>Case_Studies1</relationshipName>
    <type>Lookup</type>
</CustomField>