force-app/main/default/objects/Case_Study__c/fields/Case_Study_Description__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Description__c</fullName>
    <label>Case Study Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>