force-app/main/default/objects/Case_Study__c/fields/Case_Study_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Status__c</fullName>
    <label>Case Study Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>In Development</fullName>
                <isActive>false</isActive>
                <label>In Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>