force-app/main/default/objects/Case_Study__c/fields/Case_Study_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Type__c</fullName>
    <label>Case Study Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <label>Media and Marketing</label>
            </value>
            <value>
                <fullName>Appeals</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>