force-app/main/default/objects/Case_Study__c/fields/Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Date__c</fullName>
    <formula>Family__r.Diagnosis_Date__c</formula>
    <label>Diagnosis Date</label>
    <type>Date</type>
</CustomField>