force-app/main/default/objects/Case_Study__c/fields/Family_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Family_Post_Code__c</fullName>
    <formula>Family__r.npe01__One2OneContact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Post Code</label>
    <type>Text</type>
</CustomField>