force-app/main/default/objects/Case_Study__c/fields/Family_State__c.field-meta.xml
<CustomField>
    <fullName>Family_State__c</fullName>
    <formula>Family__r.npe01__One2OneContact__r.MailingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family State</label>
    <type>Text</type>
</CustomField>