force-app/main/default/objects/Case_Study__c/fields/Family_TownSuburb__c.field-meta.xml
<CustomField>
    <fullName>Family_TownSuburb__c</fullName>
    <formula>Family__r.npe01__One2OneContact__r.MailingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Town/Suburb</label>
    <type>Text</type>
</CustomField>