force-app/main/default/objects/Case_Study__c/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <formula>text(Family__r.Family_Type__c)</formula>
    <label>Family Type</label>
    <type>Text</type>
</CustomField>