force-app/main/default/objects/Case_Study__c/fields/Featured_Programs_Areas__c.field-meta.xml
<CustomField>
    <fullName>Featured_Programs_Areas__c</fullName>
    <label>Featured Programs/Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Camp</fullName>
            </value>
            <value>
                <fullName>Junior Camp</fullName>
            </value>
            <value>
                <fullName>Mini Camp</fullName>
            </value>
            <value>
                <fullName>Middle Camp</fullName>
            </value>
            <value>
                <fullName>Graduation Camp</fullName>
            </value>
            <value>
                <fullName>Family Experiences</fullName>
            </value>
            <value>
                <fullName>Child Life Therapy</fullName>
            </value>
            <value>
                <fullName>Family Liaison</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Puppets</fullName>
            </value>
            <value>
                <fullName>Fundraising Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>