force-app/main/default/objects/Case_Study__c/fields/Last_Attendance_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Attendance_Date__c</fullName>
    <formula>Family__r.Last_Program_Attended__c</formula>
    <label>Last Attendance Date</label>
    <type>Date</type>
</CustomField>