force-app/main/default/objects/Case_Study__c/fields/Number_of_Programs_Attended__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Programs_Attended__c</fullName>
    <formula>Family__r.Programs_Attended__c</formula>
    <label>Number of Programs Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>