force-app/main/default/objects/Case_Study__c/fields/Photo_Location__c.field-meta.xml
<CustomField>
    <fullName>Photo_Location__c</fullName>
    <label>Photo Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>