force-app/main/default/objects/Case_Study__c/fields/Voluunteer__c.field-meta.xml
<CustomField>
    <fullName>Voluunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voluunteer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Volunteer_Status__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Studies</relationshipLabel>
    <relationshipName>Case_Studies</relationshipName>
    <type>Lookup</type>
</CustomField>