force-app/main/default/objects/Case_Study__c/listViews/All_Sally.listView-meta.xml
<ListView>
    <fullName>All_Sally</fullName>
    <columns>NAME</columns>
    <columns>Family_State__c</columns>
    <columns>Family_TownSuburb__c</columns>
    <columns>Family_Post_Code__c</columns>
    <columns>Family__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Case_Study_Description__c</columns>
    <columns>Number_of_Programs_Attended__c</columns>
    <columns>Family_Type__c</columns>
    <columns>Last_Attendance_Date__c</columns>
    <columns>Diagnosis_Date__c</columns>
    <columns>Case_Study_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Family_State__c</field>
        <operation>equals</operation>
        <value>QLD</value>
    </filters>
    <filters>
        <field>Family_Type__c</field>
        <operation>equals</operation>
        <value>Patient</value>
    </filters>
    <label>All - Sally</label>
</ListView>