force-app/main/default/objects/Case_Study__c/listViews/Imported_this_year.listView-meta.xml
<ListView>
    <fullName>Imported_this_year</fullName>
    <columns>NAME</columns>
    <columns>Family_State__c</columns>
    <columns>Family_Type__c</columns>
    <columns>Family__c</columns>
    <columns>Case_Study_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Family_Type__c</field>
        <operation>equals</operation>
        <value>patient</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/1/2021 12:00 AM</value>
    </filters>
    <label>Imported this year</label>
</ListView>